# archive-explorer

./: .gitignore  tailwind.config.ts
.idx/: dev.nix
backend/: README.md  alembic.ini  main.py  pyproject.toml  test.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 086d540240ee_add_update_tables.py  c2427de70707_add_update_tables.py
backend/src/controller/: arxiv.py  auth.py  paper.py  profile.py
backend/src/core/: logger.py  storage.py
backend/src/core/storage/: base.py  supabase.py  synology.py
backend/src/database/: db.py
backend/src/errors/: __init__.py  auth.py  database.py  profile.py
backend/src/lib/: arxiv.py  auth.py
backend/src/model/: __init__.py  chat_session.py  login_session.py  message.py  paper.py  profile.py  source.py  user.py  user_settings.py
backend/src/router/: arxiv.py  auth.py  paper.py  profile.py
backend/src/schema/: arxiv.py  auth.py  paper.py  profile.py
backend/src/utils/: token.py
frontend/src/: App.tsx
frontend/src/components/: FilterSidebar.tsx  PapersTable.tsx  ViewToggle.tsx
frontend/src/components/chat/: ChatInput.tsx  (+3 more)
frontend/src/data/: mockChats.ts
frontend/src/pages/: ChatScreen.tsx  Index.tsx
frontend/src/types/: chat.ts
src/: App.tsx  index.css
src/components/: FilterChip.tsx  Navbar.tsx  Pagination.tsx  PaperCard.tsx
src/components/chat/: ChatArea.tsx  ChatHeader.tsx  ChatHistoryItem.tsx  ChatMessageBubble.tsx  ChatSidebar.tsx  PdfPreviewDialog.tsx
src/data/: mockPapers.ts
src/hooks/: useTheme.ts
src/pages/: ChatScreen.tsx  PaperDetail.tsx
src/types/: paper.ts
